<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz">Quiz</string>
    <string name="questions_amount">Questions amount:</string>
    <string name="_10">10</string>
    <string name="category">Category</string>
    <string name="all">All</string>
    <string name="difficulty">Difficulty</string>
    <string name="start">START</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_us">Rate us</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="clear_history">Clear history</string>
    <string name="_0">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>